<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_secondary99"
    tools:context=".SecondFragment">

    <TextView
        android:id="@+id/sonuclar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/sonuclar"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/isimCikti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isimCikti"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="31sp"
        app:layout_constraintBottom_toTopOf="@+id/yasCikti"
        app:layout_constraintEnd_toStartOf="@+id/isimSonuc"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sonuclar"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/isimSonuc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/yasSonuc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/isimCikti"
        app:layout_constraintTop_toBottomOf="@+id/sonuclar"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/yasCikti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yasCikti"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="31sp"
        app:layout_constraintBottom_toTopOf="@+id/boyCikti"
        app:layout_constraintEnd_toStartOf="@+id/yasSonuc"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/isimCikti"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/yasSonuc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/boySonuc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/yasCikti"
        app:layout_constraintTop_toBottomOf="@+id/isimSonuc"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/boyCikti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boyCikti"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="31sp"
        app:layout_constraintBottom_toTopOf="@+id/takimCikti"
        app:layout_constraintEnd_toStartOf="@+id/boySonuc"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yasCikti"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/boySonuc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/takimSonuc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/boyCikti"
        app:layout_constraintTop_toBottomOf="@+id/yasSonuc"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/takimCikti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/takimCikti"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="31sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/takimSonuc"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boyCikti"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/takimSonuc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/takimCikti"
        app:layout_constraintTop_toBottomOf="@+id/boySonuc"
        app:layout_constraintVertical_bias="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>